# KonSerial

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  QWEN.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.omc/: project-memory.json
.omc/sessions/: 6390afac-ddfd-4ebf-8bfc-835aabc9f290.json  75cc9f4f-9dd6-4cfe-9701-f47d3004f3bf.json
.omc/state/: agent-replay-6390afac-ddfd-4ebf-8bfc-835aabc9f290.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-04T02-04-04-080Z.json  checkpoint-2026-04-05T09-39-48-018Z.json
.qoder/repowiki/zh/content/: Tauri 集成.md  UI 组件设计.md  国际化支持.md  快速开始.md  故障排除.md  数据库设计.md  脚本系统.md  贡献指南.md  部署指南.md  项目概述.md
.qoder/repowiki/zh/content/API 参考/: API 参考.md  工具类 API.md  数据记录 API.md  脚本引擎 API.md
.qoder/repowiki/zh/content/API 参考/串口通信 API/: 串口发现与管理.md  串口通信 API.md  数据收发传输.md  运行时监控.md  连接控制管理.md
.qoder/repowiki/zh/content/前端开发/: UI 组件集成.md  Vue3 应用结构.md  前端开发.md  状态管理.md  组件架构.md  视图页面设计.md
.qoder/repowiki/zh/content/后端开发/: Rust 核心库.md  可视化模块.md  后端开发.md  数据记录模块.md  网络通信模块.md  脚本引擎模块.md
.qoder/repowiki/zh/content/后端开发/串口通信模块/: 串口命令API.md  串口管理器.md  串口通信模块.md  协议解析器.md  数据处理模块.md
.qoder/repowiki/zh/content/后端开发/工具模块/: 工具模块.md  日志系统.md  通用命令.md  配置管理模块.md
.qoder/repowiki/zh/content/架构设计/: 数据流设计.md  整体架构概览.md  架构设计.md  通信机制设计.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
docs/: rust_struct_nesting_config_storage_tutorial.md  rust_utils_module_tutorial.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.omc/state/: idle-notif-cooldown.json  last-tool-error.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/data_logger/: commands.rs  mod.rs
src-tauri/src/network/: commands.rs  manager.rs  mod.rs
src-tauri/src/script/: mod.rs
src-tauri/src/serial/: commands.rs  data_process.rs  mod.rs  port_manager.rs  protocol.rs
src-tauri/src/utils/: commands.rs  config.rs  logger.rs  mod.rs
src-tauri/src/visualization/: mod.rs
src/assets/: styles.css
src/components/: ConnectionSendPane.vue  ConnectionTerminal.vue  Layout.vue  NetworkConnectionPane.vue  SerialConnectionPane.vue
src/composables/: useKeyboardShortcuts.ts
src/router/: index.ts
src/stores/: config.ts  i18n.ts  network.ts  script.ts  serial.ts  settings.ts
src/utils/: format.ts  hex.ts  time.ts
src/views/: ChartView.vue  HistoryView.vue  NetworkView.vue  ScriptView.vue  SerialView.vue  SettingsView.vue
(+20 files in other folders)
