[package]
name = "konserial"
version = "0.2.0"
description = "A Tauri App, serial debug tool"
authors = ["sratle"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "konserial_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = ["config-json5"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serialport = "4.8.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "time", "net", "io-util"] }
tauri-plugin-clipboard-manager = "2"
chrono = "0.4.42"
colored = "2.1"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
crc = "3"
tokio-tungstenite = "0.26"
rumqttc = "0.24"
futures-util = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"
